<resources>

    <string name="app_name">Localisation App</string>
    <string name="but_localisation">Localisation</string>
    <string name="act_localisation">Localisation</string>
    <string name="settings">Settings</string>
    <string name="desc_logo">Logo image</string>
    <string name="pref_title_server_name">Server Name</string>
    <string name="pref_title_server_address">Server IP address</string>
    <string name="pref_title_server_port">Server Port</string>
    <string name="from">© DESTOUCHES Pierre - ROCHELLE Guillaume</string>
    <string name="welcome">UTBM Localisation App</string>
    <string name="contentDescriptionMap">Map</string>

</resources>