<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="Default server"
        android:key="serverName"
        android:summary="The user-friendly server name"
        android:title="@string/pref_title_server_name" >
    </EditTextPreference>

    <EditTextPreference
        android:defaultValue="0.0.0.0"
        android:key="serverAddress"
        android:summary="Server IP address"
        android:title="@string/pref_title_server_address" >
    </EditTextPreference>

    <EditTextPreference
        android:defaultValue="80"
        android:key="serverPort"
        android:summary="Server listening port"
        android:title="@string/pref_title_server_port" >
    </EditTextPreference>

</PreferenceScreen>