<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/desc_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcometext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/grey"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/localisation_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@layout/button_layout"
        android:text="@string/but_localisation"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:background="@layout/button_layout"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/copyrights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/from"
        android:textColor="@color/grey"
        android:textSize="12sp" />

</LinearLayout>